# ascii-fortress-2

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  init.cfg  readme.txt
af2/: game.cfg
af2/cfg/: cl_autoexec.cfg  meta_sv_autoexec.cfg  sv_autoexec.cfg
af2/cfg/examples/: co_test.cfg  explosive_fire.cfg  fast.cfg  pipes.cfg  spawn_blood.cfg  super_sniper.cfg  test.cfg  test_joystick.cfg  unfast.cfg
af2/cfg/gamemodes/: pong.cfg
af2/cfg/lib/: gui.cfg  matrix.cfg  vector.cfg
af2/cfg/menus/: af2_audio_settings_menu.cfg  af2_font_settings_menu.cfg  af2_join_menu.cfg  af2_keyboard_settings_menu.cfg  af2_main_menu.cfg  af2_menu.cfg  af2_mouse_settings_menu.cfg  af2_multiplayer_settings_menu.cfg  af2_server_list_menu.cfg  af2_server_menu.cfg  af2_settings_menu.cfg  af2_video_settings_menu.cfg
af2/cfg/playerclasses/: demoman.cfg  engineer.cfg  heavy.cfg  medic.cfg  pyro.cfg  scout.cfg  sniper.cfg  soldier.cfg  spy.cfg
af2/cfg/tests/: test_all.cfg  test_cvar.cfg  test_env.cfg  test_logic.cfg  test_math.cfg  test_string.cfg
af2/maps/: ctf_debug.txt  ctf_map1.txt  ctf_q3dm1.txt  ctf_turbine.txt  ctf_zahn.txt  pl_map2.txt  pong.txt  q3dm1.txt
af2/screens/: class_select.txt  menu_background.txt  scoreboard.txt  server_list.txt  team_select.txt
af2/shaders/: default.frag  default.vert  retro.vert  warped.vert  wavy.vert
dependencies/: CMakeLists.txt
dependencies/FreeType/: CMakeLists.txt
dependencies/GLEW/: CMakeLists.txt
dependencies/OpenGL/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
dependencies/SoLoud/: CMakeLists.txt
dependencies/Threads/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/sodium/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
res/: af2.rc  resource.h
src/: debug.cpp  debug.hpp  logger.cpp  logger.hpp  main.cpp
src/console/: call_frame_handle.cpp  call_frame_handle.hpp  command.hpp  command_options.cpp  command_options.hpp  command_utilities.hpp  con_command.cpp  con_command.hpp  convar.cpp  convar.hpp  environment.cpp  environment.hpp  io_buffer.cpp  io_buffer.hpp  process.cpp  process.hpp  script.cpp  script.hpp  suggestions.cpp  suggestions.hpp  virtual_machine.cpp  virtual_machine.hpp
src/console/commands/: bot_commands.cpp  bot_commands.hpp  entity_commands.cpp  entity_commands.hpp  environment_commands.cpp  environment_commands.hpp  file_commands.cpp  file_commands.hpp  game_client_commands.cpp  game_client_commands.hpp  game_client_state_commands.cpp  game_client_state_commands.hpp  game_commands.cpp  game_commands.hpp  game_server_commands.cpp  game_server_commands.hpp  game_server_state_commands.cpp  game_server_state_commands.hpp  gui_button_commands.cpp  gui_button_commands.hpp  gui_checkbox_commands.cpp  gui_checkbox_commands.hpp  gui_commands.cpp  gui_commands.hpp  gui_dropdown_commands.cpp  gui_dropdown_commands.hpp  gui_slider_commands.cpp  gui_slider_commands.hpp  gui_text_input_commands.cpp  gui_text_input_commands.hpp  input_manager_commands.cpp  input_manager_commands.hpp  inventory_client_commands.cpp  inventory_client_commands.hpp  inventory_server_commands.cpp  inventory_server_commands.hpp  listen_server_state_commands.cpp  listen_server_state_commands.hpp  logger_commands.cpp  logger_commands.hpp  (+30 more)
src/game/: game.cpp  game.hpp
src/game/client/: char_window.cpp  char_window.hpp  game_client.cpp  game_client.hpp  input_manager.cpp  input_manager.hpp  inventory_client.cpp  inventory_client.hpp  remote_console_client.cpp  remote_console_client.hpp  renderer.cpp  renderer.hpp  sound_manager.cpp  sound_manager.hpp
src/game/data/: actions.hpp  ammo.hpp  color.cpp  color.hpp  data_type.hpp  direction.hpp  hat.cpp  hat.hpp  health.hpp  inventory.hpp  latency.hpp  player_class.cpp  player_class.hpp  player_id.hpp  projectile_type.cpp  projectile_type.hpp  rectangle.hpp  score.hpp  sound_id.cpp  sound_id.hpp  team.cpp  team.hpp  tick_count.hpp  tickrate.hpp  vector.hpp  weapon.cpp  weapon.hpp
src/game/meta/: meta_client.cpp  meta_client.hpp  meta_client_messages.hpp  meta_server.cpp  meta_server.hpp  meta_server_messages.hpp
src/game/server/: bot.cpp  bot.hpp  entities.hpp  game_server.cpp  game_server.hpp  inventory_server.cpp  inventory_server.hpp  remote_console_server.cpp  remote_console_server.hpp  solid.hpp  world.cpp  world.hpp
src/game/shared/: convar_update.hpp  entities.hpp  game_client_messages.hpp  game_server_messages.hpp  map.cpp  map.hpp  resource_info.hpp  snapshot.cpp  snapshot.hpp  special_commands.hpp
src/game/state/: game_client_state.cpp  game_client_state.hpp  game_server_state.cpp  game_server_state.hpp  game_state.hpp  listen_server_state.cpp  listen_server_state.hpp  meta_client_state.cpp  meta_client_state.hpp  meta_server_state.cpp  meta_server_state.hpp
src/graphics/: buffer.cpp  buffer.hpp  error.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  glsl.hpp  handle.hpp  image.cpp  image.hpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/gui/: button.cpp  button.hpp  canvas.cpp  canvas.hpp  checkbox.cpp  checkbox.hpp  cmd_button.cpp  cmd_button.hpp  cmd_checkbox.cpp  cmd_checkbox.hpp  cmd_dropdown.cpp  cmd_dropdown.hpp  cmd_input.cpp  cmd_input.hpp  cmd_slider.cpp  cmd_slider.hpp  console.cpp  console.hpp  dropdown.cpp  dropdown.hpp  element.cpp  element.hpp  layout.hpp  menu.cpp  menu.hpp  slider.cpp  slider.hpp  text_input.cpp  text_input.hpp
src/network/: byte_stream.hpp  config.hpp  connection.cpp  connection.hpp  crypto.hpp  delta.hpp  endpoint.cpp  endpoint.hpp  message.hpp  message_layout.hpp  platform.cpp  platform.hpp  socket.cpp  socket.hpp
src/utilities/: algorithm.hpp  arrow_proxy.hpp  countdown.hpp  crc.hpp  file.cpp  file.hpp  integer.hpp  match.hpp  math.hpp  multi_hash.hpp  overloaded.hpp  reference.hpp  registry.hpp  resource.hpp  ring_map.hpp  scope_guard.hpp  span.hpp  string.hpp  tile_matrix.hpp  time.hpp  tuple.hpp  type_list.hpp
